# Swiftness

./: .README.md.swp  .gitignore  .gitmodules  CMakeLists.txt  Game.sh  HISTORIC.md  Oral_projet.pptx  README.md  Swiftness.sh  bot_commit.sh  commit.sh  compil.sh  git_config.sh  install.sh  stats.sh  timeout.sh
Oral/: Makefile  presentation.vrb
Rapport/: .fuse_hidden00000ee900000002  00_FirstPage.aux  00_FirstPage.tex  EMBARKI_GAUTHIER_HUMBERT.aux  EMBARKI_GAUTHIER_HUMBERT.bcf  EMBARKI_GAUTHIER_HUMBERT.run.xml  Makefile  compil.sh  main.out  main.run.xml
Sources/: cplusplus.cc  install.sh
Sources/Game/: CMakeCache.txt  Makefile  cmake_install.cmake  install.sh
experiments/Game/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  gameTemplate.cc  reinstall.sh  tutorial  tutorial.cc
experiments/test/: game  level0.cc  main.cc  plateforme.h  squareEntity.cc  squareEntity.h
experiments/tutorial/: CMakeCache.txt  Makefile  cmake_install.cmake
game/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  game
game/code/: CMakeCache.txt  Credits.cc  Credits.h  GameCenter.cc  GameCenter.h  GameLevel.cc  GameLevel.h  GameScenes.cc  GameScenes.h  Input.cc  Input.h  Makefile  MenuScene.cc  MenuScene.h  MenuScene.h*  SelectLevelScene.cc  SelectLevelScene.h  Start.cc  Start.h  audioManager.cc  audioManager.h  cmake_install.cmake  commands.cc  commands.h  constants.cc  constants.h  creditScene.cc  creditScene.h  gameCenter.cc  gameCenter.h  generationLevel.h  gravity.h  helloNewPadawan.cc  helloNewPadawan.h  layerData.cc  layerData.h  layerEntity.cc  layerEntity.h  level.cc  level.h  (+21 more)
game/code/entity/: heroEntity.cc  heroEntity.h  plateformEntity.cc  plateformEntity.h  squareEntity.cc  squareEntity.h
game/code/scene/: MenuScene.cc  MenuScene.h  SelectLevelScene.cc  creditScene.cc  creditScene.h  levelScene.cc  levelScene.h  pauseScene.cc  pauseScene.h  selectCustomLevelScene.cc  selectCustomLevelScene.h  selectLevelScene.cc  selectLevelScene.h  startScene.cc  startScene.h
game/code/tmx/: generationLevel.cc  generationLevel.h  layerData.cc  layerData.h  level.h  levelData.cc  levelData.h  levelGenerator.cc  levelGenerator.h  levelInitializer.cc  levelInitializer.h  levelRender.cc  levelRender.h
game/help/: class_of_the_game.txt  custom select level.txt  gestion tmx.txt  hierarchie_class_level.txt  select level idea.txt  structure_de_donnees_utile.txt
ressources/Levels/: README.md  switness.tiled-session  tmxValidator.py
ressources/Levels/Maps/: hub.tmx  level00.tmx  (+8 more)
ressources/font/: DEMO - PERSONAL USE ONLY - NihStudio.txt  DEMO - PERSONAL USE ONLY - VinType Studio.txt  futureforces.txt  license.txt  planetx.txt  read me.txt  sagan.txt  test.sh  universaljack.txt
ressources/levels/: README.md  switness.tiled-project  switness.tiled-session
ressources/tiles/: create level.txt  format_screen.txt  layer_name.txt  switness.tiled-session
support/Oral/: presentation.aux  presentation.nav  presentation.out  presentation.tex  presentation.toc
support/Rapport/: EMBARKI_GAUTHIER_HUMBERT.run.xml  EMBARKI_GAUTHIER_HUMBERT.tex  EMBARKI_GAUTHIER_HUMBERT.toc  Makefile
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  game  main.cc  plateforme.cc  squareEntity.cc
tutorial/: CMakeCache.txt  Gamedev Framework (gf)_ Documentation for gf.mhtml  Gamedev Framework (gf)_ Maths.mhtml  Makefile  cmake_install.cmake  template
(+68 files in other folders)
